force-app/main/default/objects/Programme_Events__c/Programme_Events__c.object-meta.xml
<CustomObject>
    <label>Programme/ Event</label>
    <nameField>
        <label>Programme/ Events Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programme/ Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>