force-app/main/default/objects/Programme_Events__c/fields/Active_Birthday_Programme__c.field-meta.xml
<CustomField>
    <fullName>Active_Birthday_Programme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Birthday Programme</label>
    <type>Checkbox</type>
</CustomField>