force-app/main/default/objects/Programme_Events__c/fields/Cancel_Programme_Event__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Programme_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel Programme/Event</label>
    <type>Checkbox</type>
</CustomField>