force-app/main/default/objects/Programme_Events__c/fields/Cancellation_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reasons__c</fullName>
    <label>Cancellation Reasons</label>
    <type>TextArea</type>
</CustomField>