force-app/main/default/objects/Programme_Events__c/fields/Donation_URL__c.field-meta.xml
<CustomField>
    <fullName>Donation_URL__c</fullName>
    <formula>HYPERLINK($Label.Donation_Programme_URL  + Id, &quot;Donation Page&quot;)</formula>
    <label>Donation URL</label>
    <type>Text</type>
</CustomField>