force-app/main/default/objects/Programme_Events__c/fields/Event_Attire__c.field-meta.xml
<CustomField>
    <fullName>Event_Attire__c</fullName>
    <label>Event Attire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Casual</fullName>
            </value>
            <value>
                <fullName>Smart Casual</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>