force-app/main/default/objects/Programme_Events__c/fields/Fundraising_Status__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Status__c</fullName>
    <label>Fundraising Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
                <default>true</default>
                <label>Planned</label>
            </value>
            <value>
                <fullName>Partially Achieved</fullName>
            </value>
            <value>
                <fullName>Fully Achieved</fullName>
            </value>
            <value>
                <fullName>Over Achieved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>