force-app/main/default/objects/Programme_Events__c/fields/LandingURL__c.field-meta.xml
<CustomField>
    <fullName>LandingURL__c</fullName>
    <formula>$Label.Landing_URL  +&quot;attendance-program?id=&quot;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendance URL</label>
    <type>Text</type>
</CustomField>