force-app/main/default/objects/Programme_Events__c/fields/Main_Sponsor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Main_Sponsor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Sponsor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Programme/ Events</relationshipLabel>
    <relationshipName>Programme_Events</relationshipName>
    <type>Lookup</type>
</CustomField>