force-app/main/default/objects/Programme_Events__c/fields/Programme_Description__c.field-meta.xml
<CustomField>
    <fullName>Programme_Description__c</fullName>
    <label>Programme Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>