force-app/main/default/objects/Programme_Events__c/fields/Programme_Event_No__c.field-meta.xml
<CustomField>
    <fullName>Programme_Event_No__c</fullName>
    <displayFormat>P{yy}{mm}-{0000}</displayFormat>
    <label>Programme/Event No.</label>
    <type>AutoNumber</type>
</CustomField>