force-app/main/default/objects/Programme_Events__c/fields/Programme_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Programme_Remarks__c</fullName>
    <label>Programme Remarks</label>
    <type>TextArea</type>
</CustomField>