force-app/main/default/objects/Programme_Events__c/fields/Programme_Title__c.field-meta.xml
<CustomField>
    <fullName>Programme_Title__c</fullName>
    <label>Programme Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>