force-app/main/default/objects/Programme_Events__c/fields/Reasons_to_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Reasons_to_Cancel__c</fullName>
    <label>Reasons to Cancel</label>
    <type>TextArea</type>
</CustomField>