force-app/main/default/objects/Programme_Events__c/fields/Total_Donation_Amt__c.field-meta.xml
<CustomField>
    <fullName>Total_Donation_Amt__c</fullName>
    <label>Total Donation Amt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>