force-app/main/default/objects/Programme_Events__c/fields/Venue_of_Event_or_Mobilisation__c.field-meta.xml
<CustomField>
    <fullName>Venue_of_Event_or_Mobilisation__c</fullName>
    <label>Venue of Event or Mobilisation</label>
    <length>200</length>
    <type>Text</type>
</CustomField>