force-app/main/default/objects/Programme_Events__c/fields/Volunteer_Reporting_Venue__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Reporting_Venue__c</fullName>
    <label>Volunteer Reporting Venue</label>
    <type>TextArea</type>
</CustomField>