force-app/main/default/objects/Programme_Events__c/recordTypes/Fundraising.recordType-meta.xml
<RecordType>
    <fullName>Fundraising</fullName>
    <active>true</active>
    <label>Fundraising</label>
</RecordType>