force-app/main/default/objects/Programme_Events__c/validationRules/Start_date_and_End_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_date_and_End_date</fullName>
    <active>true</active>
    <description>Validation for End Date should be greater than Start date</description>
    <errorConditionFormula>Start_Date_Time__c &gt;  End_Date_Time__c</errorConditionFormula>
    <errorDisplayField>End_Date_Time__c</errorDisplayField>
    <errorMessage>Always Start date should be less than End Date</errorMessage>
</ValidationRule>